[gd_scene format=3 uid="uid://1ggtglgl0kvn"]

[ext_resource type="Texture2D" uid="uid://bpf2twgeweu4g" path="res://assets/icon.svg" id="1_4flbx"]
[ext_resource type="Script" uid="uid://eutfxpmyyjkv" path="res://scripts/player_controls.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://b7r6gv2q3o8oq" path="res://scripts/cards/card_resource.gd" id="3_smehm"]
[ext_resource type="PackedScene" uid="uid://c65ut4j8wt130" path="res://scenes/hurtbox.tscn" id="4_hqtel"]
[ext_resource type="Script" uid="uid://cy2xxh3slvqk7" path="res://scripts/cards/card_responder.gd" id="4_jej6c"]
[ext_resource type="Resource" uid="uid://obkokaoen8cs" path="res://assets/cards/white_projectile.tres" id="4_ur7pv"]
[ext_resource type="Resource" uid="uid://cjyykjitx47n" path="res://assets/cards/temp_card.tres" id="4_y4r1p"]
[ext_resource type="Script" uid="uid://uvoc356y8i6x" path="res://scripts/cards/responders/print_responder.gd" id="5_d2wvv"]
[ext_resource type="Script" uid="uid://d0w5wjhjrfer3" path="res://scripts/health.gd" id="5_qlg0r"]
[ext_resource type="PackedScene" uid="uid://dq5vts8psil0v" path="res://scenes/my_projectile.tscn" id="6_3v2ag"]
[ext_resource type="Script" uid="uid://ddn6ygxu4howd" path="res://scripts/cards/card_hand.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://bss24ko1fnm1" path="res://scripts/cards/responders/compound_responder.gd" id="7_f1ej7"]
[ext_resource type="Script" uid="uid://isnvsee8jx5h" path="res://scripts/cards/responders/projectile_spawner.gd" id="7_jej6c"]
[ext_resource type="PackedScene" uid="uid://bakfiuo12tj8l" path="res://scenes/my_projectile1.tscn" id="7_oprun"]

[sub_resource type="Resource" id="Resource_f1ej7"]
script = ExtResource("5_d2wvv")
metadata/_custom_type_script = "uid://uvoc356y8i6x"

[sub_resource type="Resource" id="Resource_oprun"]
script = ExtResource("7_jej6c")
projectile = ExtResource("6_3v2ag")
metadata/_custom_type_script = "uid://isnvsee8jx5h"

[sub_resource type="Resource" id="Resource_qfm1y"]
script = ExtResource("7_jej6c")
projectile = ExtResource("7_oprun")
metadata/_custom_type_script = "uid://isnvsee8jx5h"

[sub_resource type="Resource" id="Resource_fulsm"]
script = ExtResource("7_f1ej7")
responders = Array[ExtResource("4_jej6c")]([SubResource("Resource_oprun"), SubResource("Resource_qfm1y")])
metadata/_custom_type_script = "uid://bss24ko1fnm1"

[sub_resource type="Resource" id="Resource_a8ls1"]
script = ExtResource("3_smehm")
id = "my_card"
display_name = "my card :3"
on_added = SubResource("Resource_f1ej7")
on_use = SubResource("Resource_fulsm")
metadata/_custom_type_script = "uid://b7r6gv2q3o8oq"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smehm"]
size = Vector2(128, 128)

[node name="Player" type="CharacterBody2D" unique_id=1261470852]
script = ExtResource("1_onrkg")
starting_hand = Array[ExtResource("3_smehm")]([SubResource("Resource_a8ls1"), ExtResource("4_y4r1p"), ExtResource("4_ur7pv"), ExtResource("4_y4r1p")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=790523092]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_smehm")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=741126649]
texture = ExtResource("1_4flbx")

[node name="Hurtbox" parent="." unique_id=533531178 instance=ExtResource("4_hqtel")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=1821603433]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_smehm")

[node name="PlayerHealth" type="Node" parent="." unique_id=1481931734]
script = ExtResource("5_qlg0r")
max_health = 5.0
metadata/_custom_type_script = "uid://d0w5wjhjrfer3"

[node name="CardHand" type="Node" parent="." unique_id=335392733]
script = ExtResource("6_tuyoq")
metadata/_custom_type_script = "uid://ddn6ygxu4howd"

[node name="Timer" type="Timer" parent="." unique_id=2106896782]

[connection signal="on_damaged" from="Hurtbox" to="." method="_on_damaged"]
[connection signal="on_before_changed" from="PlayerHealth" to="." method="_on_before_changed"]
[connection signal="on_death" from="PlayerHealth" to="." method="_on_health_zero"]
